Implemented Answer UI

--- a/Pillo/Info.plist
+++ b/Pillo/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>so that other users can see your face or what&apos;s in front of you</string>
 </dict>
 </plist>
